tests/testcases/errors/declaration3.boo
"""
declaration3.boo(4,12): BCE0022: Cannot convert 'System.String' to 'System.Int32'.
"""
i as int = "foo"
